force-app/main/default/objects/Game_Session__c/Game_Session__c.object-meta.xml
<CustomObject>
    <label>Game Session</label>
    <nameField>
        <displayFormat>GS-{0000}</displayFormat>
        <label>Game Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>