force-app/main/default/objects/Game_Session__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Step</label>
    <referenceTo>Game_Unit__c</referenceTo>
    <relationshipLabel>Game Sessions</relationshipLabel>
    <relationshipName>Game_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>