force-app/main/default/objects/Game_Session__c/fields/Moderator_Code__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Code__c</fullName>
    <externalId>true</externalId>
    <label>Moderator Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>