force-app/main/default/objects/Game_Session__c/fields/Session_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Code__c</fullName>
    <externalId>true</externalId>
    <label>Session Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>